--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
    </div> 
 
    <script>
+    // 1. this will create a random password
     const passwordBox = document.getElementById("password");
     const length = 12;
 
