--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
    </div> 
 
    <script>
+    // 2. create random password using upper, lower, nb, symbol
     const passwordBox = document.getElementById("password");
     const length = 12;
 
